# aegisframe-tower

./: .gitignore  ARCHITECTURE-EN.md  ARCHITECTURE.md  BUILDING-EN.md  BUILDING.md  Cargo.toml  LICENSE  README-RUST-EN.md  README-RUST.md  README.md  enterprise-README.md  enterprise-RUST-README-EN.md  enterprise-RUST-README.md  render-README.md  render-RUST-README-EN.md  render-RUST-README.md
enterprise/: Cargo.toml  Dockerfile  docker-compose.hostinger.yml  docker-compose.yml  license_gate.py  requirements.txt  server.py  setup_ec2.sh
enterprise/api/: __init__.py  chain_verifier.py  pscp_proof.py
enterprise/monitoring/: __init__.py  gpu_attestor.py  process_attestor.py  socket_monitor.py
enterprise/src/: main.rs
enterprise/src/pscp/: gpu_attestor.rs  mod.rs  process_attestor.rs  proof_engine.rs  socket_monitor.rs
enterprise/static/: .gitkeep  index.html
render/: Cargo.toml  render.yaml  server.py
render/src/: main.rs
render/static/: index.html  indexold.html
verifier-rs/: Cargo.toml
verifier-rs/src/: main.rs
