[package]
name = "aegisframe-render"
version = "0.7.0"
edition = "2021"
description = "AegisFrame Control Tower — Render Server (Rust)"
authors = ["X-Loop³ Labs <info@xloop3.com>"]

[[bin]]
name = "aegisframe-render"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
