[package]
name = "aegisframe-verifier"
version = "0.6.0"
edition = "2021"
description = "AegisFrame governance chain verifier — X-Loop³ Labs"
license = "LicenseRef-Proprietary"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
